# MilkyWayIME

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Build.targets  MilkyWayIME.Common.props  MilkyWayIME.Internal.vcxproj  MilkyWayIME.Tests.Tsf.vcxproj  MilkyWayIME.Tests.Unit.vcxproj  MilkyWayIME.Tools.FocusWatch.vcxproj  MilkyWayIME.Tools.KeyboardMatrix.vcxproj  MilkyWayIME.Tsf.vcxproj  MilkyWayIME.sln  README.ko.md  README.md  mwime_tsf.def
.github/workflows/: build-installer.yml
cmake/: README.md
cmake/toolchains/: msvc-x64.cmake
data/dictionaries/hanja/: README.md
data/layouts/: README.md
data/layouts/base/: graphite.json  us_qwerty.json
data/layouts/korean/: ko_dubeolsik.json  libhangul_2.json
data/layouts/physical/: colemak.json  colemak_dh.json  us_qwerty.json
docs/architecture/: initial-structure.md
installer/: MilkyWayIME.wixproj  MilkyWayIME.wxs  README.md  build-installer.ps1
src/: CMakeLists.txt
src/adapters/dictionary/: README.md  generated_hanja_data.h  libhangul_hanja_dictionary.cpp  libhangul_hanja_dictionary.h
src/adapters/libhangul/: hangul_composer.h  libhangul_composer.cpp  libhangul_composer_stub.cpp
src/common/: README.md
src/engine/composition/: composition_snapshot.h
src/engine/hanja/: candidate_request.cpp  candidate_request.h
src/engine/key/: base_layout_key.h  key_analysis.cpp  key_analysis.h  layout_key.h  normalized_key_event.h  physical_key.h
src/engine/layout/: base_layout_json_loader.cpp  base_layout_json_loader.h  layout_registry.cpp  layout_registry.h  layout_types.h
src/engine/session/: input_session.cpp  input_session.h
src/engine/shortcut/: shortcut_resolver.cpp  shortcut_resolver.h
src/engine/state/: modifier_state.h
src/tsf/: exports.cpp
src/tsf/candidate/: candidate_list_ui.cpp  candidate_list_ui.h
src/tsf/compartment/: README.md
src/tsf/debug/: debug_log.h
src/tsf/display/: README.md  display_attribute.cpp  display_attribute.h
src/tsf/edit/: README.md  composition_edit_session.cpp  composition_edit_session.h  nikke_direct_text_composition.cpp  nikke_direct_text_composition.h  text_edit_plan.cpp  text_edit_plan.h  text_edit_sink.h  transitory_composition_bridge.cpp  transitory_composition_bridge.h  transitory_direct_text_composition.cpp  transitory_direct_text_composition.h  tsf_text_edit_sink.cpp  tsf_text_edit_sink.h
src/tsf/langbar/: README.md  input_mode_lang_bar_item.cpp  input_mode_lang_bar_item.h
src/tsf/registration/: README.md  text_service_registration.cpp  text_service_registration.h
src/tsf/resources/: milkyway_tsf.rc  resource.h
src/tsf/service/: module_state.cpp  module_state.h  text_service.cpp  text_service.h  tip_text_service.cpp  tip_text_service.h
src/tsf/settings/: user_layout_paths.cpp  user_layout_paths.h  user_settings.cpp  user_settings.h
src/tsf/threadmgr/: README.md
src/ui/candidate/: README.md  candidate_theme.cpp  candidate_theme.h  candidate_window.cpp  candidate_window.h
src/ui/notify/: README.md
tests/: CMakeLists.txt
tests/integration/: README.md  tsf_runtime_tests.cpp
tests/layout/: README.md
tests/unit/: input_session_tests.cpp
tools/: generate-hanja-cache.cmd  generate-static-hanja.cmd  generate-static-hanja.py  register-msvc-debug.cmd  register-msvc-debug.ps1  unregister-msvc-debug.cmd  unregister-msvc-debug.ps1
tools/focus-watch/: focus_watch_main.cpp
tools/keyboard-matrix/: README.md  keyboard_matrix_main.cpp
